--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
 
+@plugin "daisyui"{
+  themes: false;
+};
+
+
 @theme {
   --font-figtree: "Figtree", sans-serif;
   --font-inter: "Inter", sans-serif;
@@ -59,5 +64,11 @@
   --shadow-300: 0px 2px 30px 0px rgba(0, 0, 0, 0.05);
   --shadow-400: 0px 2px 6px 0px rgba(13, 10, 44, 0.08);
   --shadow-500: 0px 12px 16px -4px rgba(16, 24, 40, 0.1);
+
+  --radius-14: 14px;
   --radius-20: 20px;
+
+  --gap-30: 30px;
+
+  --padding-30: 30px;
 }
